added restart button

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
       </div>
       <div class="col-md-2 text-center"></div>
     </div>
+    <div class="row">
+      <div class="col-md-4 text-center"></div>
+      <div class="col-md-4 text-center">
+        <button id="restart" class="btn btn-light restart text-center">
+          RESTART
+        </button>
+      </div>
+      <div class="col-md-4 text-center"></div>
+    </div>
     <!-- end html code -->
 
     <!--Link jquery-->
